# Quads_Project

./: .gitignore  README.md  light_char_log.csv
.claude/: settings.json
drone_dev/: .gitignore  CMakeLists.txt  README.md
drone_dev/airframes/: 4052_holybro_qav250.sh
drone_dev/src/ArUco_detector_node/: package.xml  setup.cfg  setup.py
drone_dev/src/ArUco_detector_node/ArUco_detector_node/: aruco_detector.py  aruco_detector_node.py  aruco_detector_publisher.py
drone_dev/src/ArUco_detector_node/launch/: test.launch.py
drone_dev/src/aruco_detector_node/: setup.py
drone_dev/src/csi_camera_publisher/: package.xml  setup.cfg  setup.py
drone_dev/src/csi_camera_publisher/config/: camera_params.yaml
drone_dev/src/landing_controller_node/: setup.cfg  setup.py
drone_dev/src/landing_pad_detector/: README.md  package.xml  setup.cfg  setup.py
drone_dev/src/landing_pad_detector/config/: detector_params.yaml
drone_dev/src/landing_pad_detector/landing_pad_detector/: composed.py  detector_lib.py  detector_node.py
drone_dev/src/landing_pad_detector/launch/: composed_precision_land.launch.py  precision_land.launch.py
drone_dev_sim/: .gitignore  CMakeLists.txt  README.md
drone_dev_sim/airframes/: 4052_holybro_s500_sim.sh
drone_dev_sim/aruco_landing_pad/: model.config  model.sdf
drone_dev_sim/landing_logic_sim/landing_controller_node/: package.xml  setup.py
drone_dev_sim/logs/: latest
drone_dev_sim/model/: model.config  model.sdf
drone_dev_sim/model/landing_pad/: model.config  model.sdf
drone_dev_sim/tools/: register_airframe.sh  register_landing_pad.sh  run_sim_stack.sh
install/: local_setup.sh  setup.sh
landingPadDetection/Camera_calibration_Im219/: Camera_Calibration.py  camera_matrix.npy  collectImage.py  detect.py  dist_coeffs.npy
landingPadDetection/Camera_calibration_OV9218/: Camera_Calibration.py  aruco_detect.py  collectImage.py  list_cameras.py  pose_filter.py  rotation_utils.py  stream.py  vision_detection_lowLight.py
landingPadDetection/mac_carera__/: app.py  camera.py  config.py  detection.py  dist_coeffs.npy  pose.py  vision_landing_aruco.py
log/: latest_build  latest_extensions  latest_list
(+44 files in other folders)
