<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">
  <name>landing_pad_detector</name>
  <version>0.1.0</version>
  <description>Low-light ArUco landing-pad detection for OV9281 on Jetson Nano. Subscribes to the csi_camera_publisher image/camera_info topics, estimates the landing-pad pose, and forwards it to PX4 via MAVROS.</description>
  <maintainer email="vsor198@aucklanduni.ac.nz">vsor198</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Optional: only needed to publish mavros_msgs/LandingTarget directly.
       The node degrades gracefully (PoseStamped only) if this is absent. -->
  <exec_depend>mavros_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
